Minor styling fix to about section on mobile

--- a/src/css/About.css
+++ b/src/css/About.css
@@ -21,7 +21,7 @@
 
 .about > img {
     width: 300px;
-    height: 300px;;
+    height: 300px;
     border-radius: 50%;
     margin: 10px 0 0 30px;
 }
@@ -29,6 +29,12 @@
 @media screen and (max-width:940px){
     .about {
         flex-direction: column;
+        justify-content: center;
+        margin: 0 15vw 0 15vw;
+    }
+
+    .aboutContent {
+        margin: 10px 0 0 0;
     }
 
     .about > img {
